--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
+    background-color: #efefef;
 }
 
 header {
@@ -44,11 +45,67 @@ input {
     font-size: 17px;
     font-family: 'Fira Sans Condensed', sans-serif;
     margin-bottom: 0.5rem;
+    width: 30vw;
+    height: 5vh;
 }
 
-select{
+.checkmark{
+    width: 1vw;
+    height: 2vh;
+}
+
+select {
     font-size: 17px;
     font-family: 'Fira Sans Condensed', sans-serif;
     margin-bottom: 0.5rem;
+    width: 30vw;
+    height: 5vh;
 }
+
+.container label {
+    display: inline;
+}
+
+.container{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.btn {
+    width: 10rem;
+    height: 6%;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: rgb(14, 14, 26);
+    color: rgb(234, 234, 234);
+    font-weight: 700;
+    transition: 0.6s;
+    -webkit-box-reflect: linear-gradient(to top, rgba(251, 251, 251, 0), rgba(0,0,0,0.4));
+  }
+
+  .btn:active{
+    scale: 0.92;
+  }
+
+  .btn:hover{
+    background: rgb(9, 29, 67);
+    background: linear-gradient(270deg, rgba(2, 19, 50, 0.681)0%, rgba(10, 80, 218, 0.873)60%);
+    color: #fafafc;
+    
+  }
+
+  #submit{
+    margin-right: 0.5rem;
+  }
+
+  a{
+    color: rgb(6, 6, 122);
+  }
+  
 
