--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -108,4 +108,20 @@ select {
     color: rgb(6, 6, 122);
   }
   
+  
+  footer{
+    background-color: #bfbfbf;
+    width: 100%;
+    height: 10%;
+    margin-top: 3rem;
+  }
+
+  #CineColombia{
+    width: 6rem;
+    height: 10vh;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+   
+  }
 
