--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -10,7 +10,7 @@ body {
 
 header {
     background-color: black;
-    width: 100vw;
+    width: 100%;
     height: 18vh;
 }
 
@@ -122,6 +122,5 @@ select {
     margin-top: 1rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
-   
   }
 
