--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -119,8 +119,27 @@ select {
   #CineColombia{
     width: 6rem;
     height: 10vh;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
+    display: inline;
   }
+
+  .links{
+    font-size: 1rem;
+    color: black;
+    display: inline;
+  }
+
+ a{
+    margin-left: 2rem;
+    text-decoration: none;
+    color: black;
+ }
+
+ .info{
+    margin-left: 28rem;
+ }
+
+
 
