--- a/frontend/ApiMovies.css
+++ b/frontend/ApiMovies.css
@@ -26,15 +26,13 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35px;
+    height: 2rem;
   }
   
   .input {
-    max-width: 190px;
-    height: 100%;
+    width: 25rem;
     outline: none;
     font-size: 14px;
-    font-weight: 500;
     background-color: #53535f;
     caret-color: #f7f7f8;
     color: #fff;
@@ -43,6 +41,7 @@ header {
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
     margin-right: 1px;
+    margin-top: 6rem;
     transition: all .2s ease;
   }
   
@@ -51,7 +50,7 @@ header {
   }
   
   .input:focus {
-    border: 2px solid #a970ff;
+    border: 3px solid #709dff;
     background-color: #0e0e10;
   }
   
@@ -61,8 +60,9 @@ header {
     background-color: rgba(42, 42, 45, 1);
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
-    height: 100%;
-    width: 30px;
+    height: 2.1rem;
+    width: 2rem;
+    margin-top: 6rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,6 +71,50 @@ header {
   .search__btn:hover {
     background-color: rgba(54, 54, 56, 1);
   }
+
+  .resultMovies{
+    height: 40rem;
+  }
+  
+  footer{
+    background-color: #bfbfbf;
+    width: 100vw;
+    margin-top: 3rem;
+  }
+
+  #CineColombia{
+    width: 6rem;
+    height: 10vh;
+    margin-top: 1.5rem;
+    margin-left: 1rem;
+    display: inline;
+  }
+
+  .links{
+    font-size: 1rem;
+    color: black;
+    display: inline;
+  }
+
+ .links a{
+    text-decoration: none;
+    color: black;
+   
+ }
+
+ .info{
+    margin-left: 29rem;
+ }
+
+ .cineco, .Contactanos, .Preguntas{
+    margin-left: 2rem;
+ }
+
+
+
+
+
+
 
 
  
