--- a/frontend/ApiMovies.css
+++ b/frontend/ApiMovies.css
@@ -1,173 +1,165 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Fira Sans Condensed', sans-serif;
-    background-color: #efefef;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  background-color: #efefef;
 }
 
 header {
-    background-color: black;
-    width: 100vw;
-    height: 18vh;
+  background-color: black;
+  width: 100vw;
+  height: 18vh;
 }
 
 #logo {
-    width: 8rem;
-    height: 15vh;
-    float: right;
-    margin-top: 3vh;
-    margin-right: 2vw;
+  width: 8rem;
+  height: 15vh;
+  float: right;
+  margin-top: 3vh;
+  margin-right: 2vw;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2rem;
-  }
-  
-  .input {
-    width: 25rem;
-    outline: none;
-    font-size: 14px;
-    background-color: #53535f;
-    caret-color: #f7f7f8;
-    color: #fff;
-    padding: 7px 10px;
-    border: 2px solid transparent;
-    border-top-left-radius: 7px;
-    border-bottom-left-radius: 7px;
-    margin-right: 1px;
-    margin-top: 6rem;
-    transition: all .2s ease;
-  }
-  
-  .input:hover {
-    border: 2px solid rgba(255, 255, 255, 0.16);
-  }
-  
-  .input:focus {
-    border: 3px solid #709dff;
-    background-color: #0e0e10;
-  }
-  
-  .search__btn {
-    border: none;
-    cursor: pointer;
-    background-color: rgba(42, 42, 45, 1);
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
-    height: 2.1rem;
-    width: 2rem;
-    margin-top: 6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .search__btn:hover {
-    background-color: rgba(54, 54, 56, 1);
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+}
 
-  .resultMovies{
-    height: 40rem;
-  }
+.input {
+  width: 25rem;
+  outline: none;
+  font-size: 14px;
+  background-color: #53535f;
+  caret-color: #f7f7f8;
+  color: #fff;
+  padding: 7px 10px;
+  border: 2px solid transparent;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  margin-right: 1px;
+  margin-top: 6rem;
+  transition: all .2s ease;
+}
 
+.input:hover {
+  border: 2px solid rgba(255, 255, 255, 0.16);
+}
 
-  .flip-card {
-    background-color: transparent;
-    width: 240px;
-    height: 330px;
-    perspective: 1000px;
-    font-family: sans-serif;
-    margin-left: 27%;
-    margin-top: 4%;
-    font-size: 20px;
-  }
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front,
-  .flip-card-back {
-    box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border: 1px solid coral;
-    border-radius: 1rem;
-  }
-  
-  .flip-card-front {
-    background: linear-gradient(120deg, bisque 60%, rgb(255, 231, 222) 88%,
-        rgb(255, 211, 195) 40%, rgba(255, 127, 80, 0.812) 48%);
-    color: coral;
-  }
-  
-  .flip-card-back {
-    background: linear-gradient(120deg, rgb(245, 244, 236) 30%, rgb(254, 236, 148) 88%,
-        rgb(249, 249, 249) 40%, rgb(250, 235, 123) 78%);
-    color: rgb(25, 24, 24);
-    transform: rotateY(180deg);
-  }
-  
-  footer{
-    background-color: #bfbfbf;
-    width: 100vw;
-    margin-top: 3rem;
-  }
+.input:focus {
+  border: 3px solid #709dff;
+  background-color: #0e0e10;
+}
 
-  #CineColombia{
-    width: 6rem;
-    height: 10vh;
-    margin-top: 1.5rem;
-    margin-left: 1rem;
-    display: inline;
-  }
+.search__btn {
+  border: none;
+  cursor: pointer;
+  background-color: rgba(42, 42, 45, 1);
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  height: 2.1rem;
+  width: 2rem;
+  margin-top: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .links{
-    font-size: 1rem;
-    color: black;
-    display: inline;
-  }
+.search__btn:hover {
+  background-color: rgba(54, 54, 56, 1);
+}
 
- .links a{
-    text-decoration: none;
-    color: black;
-   
- }
+.resultMovies {
+  height: 40rem;
+}
 
- .info{
-    margin-left: 29rem;
- }
+.flip-card {
+  background-color: transparent;
+  width: 16rem;
+  height: 22rem;
+  perspective: 1000px;
+  font-family: sans-serif;
+  margin-left: 3rem;
+  margin-top: 7rem;
+  font-size: 20px;
+}
 
- .cineco, .Contactanos, .Preguntas{
-    margin-left: 2rem;
- }
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
 
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
 
+.flip-card-front,
+.flip-card-back {
+  box-shadow: 0 8px 14px 0 rgba(3, 22, 40, 0.2);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border: 1px solid rgb(59, 124, 151);
+  border-radius: 1rem;
+}
 
+.flip-card-front {
+  background: linear-gradient(120deg, rgb(10, 28, 47) 60%, rgb(4, 58, 86) 88%,
+      rgb(5, 48, 66) 40%, rgba(2, 18, 36, 0.812) 48%);
+  color: rgb(2, 18, 29);
+}
 
+.flip-card-back {
+  background: linear-gradient(120deg, rgb(10, 28, 47) 60%, rgb(4, 58, 86) 88%,
+      rgb(5, 48, 66) 40%, rgba(2, 18, 36, 0.812) 48%);
+  color: rgb(2, 18, 29);
+  transform: rotateY(180deg);
+}
 
+footer {
+  background-color: #bfbfbf;
+  width: 100vw;
+  margin-top: 3rem;
+}
 
+#CineColombia {
+  width: 6rem;
+  height: 10vh;
+  margin-top: 1.5rem;
+  margin-left: 1rem;
+  display: inline;
+}
 
+.links {
+  font-size: 1rem;
+  color: black;
+  display: inline;
+}
 
- 
+.links a {
+  text-decoration: none;
+  color: black;
+
+}
+
+.info {
+  margin-left: 29rem;
+}
+
+.cineco,
+.Contactanos,
+.Preguntas {
+  margin-left: 2rem;
+}
