--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,151 +1,152 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Fira Sans Condensed', sans-serif;
-    background-color: #efefef;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  background-color: #efefef;
 }
 
 header {
-    background-color: black;
-    width: 100%;
-    height: 18vh;
+  background-color: black;
+  width: 100%;
+  height: 18vh;
 }
 
 #logo {
-    width: 8rem;
-    height: 15vh;
-    float: right;
-    margin-top: 3vh;
-    margin-right: 2vw;
+  width: 8rem;
+  height: 15vh;
+  float: right;
+  margin-top: 3vh;
+  margin-right: 2vw;
 }
 
 h1 {
-    text-align: center;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
+  text-align: center;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 form {
-    width: 70%;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 20px;
+  width: 70%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 20px;
 }
 
 
 label {
-    display: block;
-    margin-bottom: 0.5rem;
+  display: block;
+  margin-bottom: 0.5rem;
 }
 
 input {
-    font-size: 17px;
-    font-family: 'Fira Sans Condensed', sans-serif;
-    margin-bottom: 0.5rem;
-    width: 30vw;
-    height: 5vh;
+  font-size: 17px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  margin-bottom: 0.5rem;
+  width: 30vw;
+  height: 5vh;
 }
 
-.checkmark{
-    width: 1vw;
-    height: 2vh;
+.checkmark {
+  width: 1vw;
+  height: 2vh;
 }
 
 select {
-    font-size: 17px;
-    font-family: 'Fira Sans Condensed', sans-serif;
-    margin-bottom: 0.5rem;
-    width: 30vw;
-    height: 5vh;
+  font-size: 17px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  margin-bottom: 0.5rem;
+  width: 30vw;
+  height: 5vh;
 }
 
 .container label {
-    display: inline;
+  display: inline;
 }
 
-.container{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+.container {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .btn {
-    width: 10rem;
-    height: 6%;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-    margin-bottom: 1rem;
-    border: none;
-    outline: none;
-    border-radius: 0.4rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    background-color: rgb(14, 14, 26);
-    color: rgb(234, 234, 234);
-    font-weight: 700;
-    transition: 0.6s;
-    -webkit-box-reflect: linear-gradient(to top, rgba(251, 251, 251, 0), rgba(0,0,0,0.4));
-  }
+  width: 10rem;
+  height: 6%;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  border: none;
+  outline: none;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  background-color: rgb(14, 14, 26);
+  color: rgb(234, 234, 234);
+  font-weight: 700;
+  transition: 0.6s;
+  -webkit-box-reflect: linear-gradient(to top, rgba(251, 251, 251, 0), rgba(0, 0, 0, 0.4));
+}
 
-  .btn:active{
-    scale: 0.92;
-  }
+.btn:active {
+  scale: 0.92;
+}
 
-  .btn:hover{
-    background: rgb(9, 29, 67);
-    background: linear-gradient(270deg, rgba(2, 19, 50, 0.681)0%, rgba(10, 80, 218, 0.873)60%);
-    color: #fafafc;
-    
-  }
+.btn:hover {
+  background: rgb(9, 29, 67);
+  background: linear-gradient(270deg, rgba(2, 19, 50, 0.681)0%, rgba(10, 80, 218, 0.873)60%);
+  color: #fafafc;
 
-  #submit{
-    margin-right: 0.5rem;
-  }
+}
 
-  a{
-    color: rgb(6, 6, 122);
-  }
-  
-  
-  footer{
-    background-color: #bfbfbf;
-    width: 100%;
-    height: 10%;
-    margin-top: 3rem;
-  }
+#submit {
+  margin-right: 0.5rem;
+}
 
-  #CineColombia{
-    width: 6rem;
-    height: 10vh;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-    display: inline;
-  }
-
-  .links{
-    font-size: 1rem;
-    color: black;
-    display: inline;
-  }
-
- .links a{
-    text-decoration: none;
-    color: black;
-   
- }
-
- .info{
-    margin-left: 29rem;
- }
-
- .cineco, .Contactanos, .Preguntas{
-    margin-left: 2rem;
- }
+a {
+  color: rgb(6, 6, 122);
+}
 
 
+footer {
+  background-color: #bfbfbf;
+  width: 100%;
+  height: 10%;
+  margin-top: 3rem;
+}
 
+#CineColombia {
+  width: 6rem;
+  height: 10vh;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  display: inline;
+}
 
+.links {
+  font-size: 1rem;
+  color: black;
+  display: inline;
+}
 
+.links a {
+  text-decoration: none;
+  color: black;
+
+}
+
+.info {
+  margin-left: 29rem;
+}
+
+.cineco,
+.Contactanos,
+.Preguntas {
+  margin-left: 2rem;
+}
+
+#moviesBtn {
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
